migrated from hamcrest to assertj successfully